<resources>
    <string name="app_name">Product Table</string>
    <string name="changeLang">Change UI language</string>
    <string name="addProd">Add a Product</string>
    <string name="priceView">Price:</string>
    <string name="stockView">Stock:</string>
    <string name="descView">Description:</string>
    <string name="nameView">Name:</string>
    <string name="add">Add</string>
    <string name="prodRemoved">Product removed</string>

</resources>